5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1575_1331.log
== TEST (2019-03-12 21:59:29) 
-- CODE:
print(round(50/3,0))
-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:00:18) 
-- CODE:
print(round(50/3,0))
print(50-17*3)
-- OUTPUT:
17.0
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:01:07) 
-- CODE:
print(round(50/3,1))
print(50-17*3)
-- OUTPUT:
16.7
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:02:59) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:04:03) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:04:24) 
-- CODE:
print(round(50/3,-1))
print(50-16*3)
-- OUTPUT:
20.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:04:41) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:05:34) 
-- CODE:
print(round(50/3,0 -1))
print(50-16*3)
-- OUTPUT:
20.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:06:49) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:07:41) 
-- CODE:
print(round(50/3,0<50))
print(50-16*3)
-- OUTPUT:
16.7
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:08:29) 
-- CODE:
print(round(50/3))
print(50-16*3)
-- OUTPUT:
17
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:10:20) 
-- CODE:
print(round(50/3.0,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:12:13) 
-- CODE:
print(round(50/3,00))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:12:26) 
-- CODE:
print(round(50/3,0.1))
print(50-16*3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(50/3,0.1))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:13:58) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:14:26) 
-- CODE:
print(round(50/3,0))
print(50-16*3)
-- EXECUTION TIME:
0.123222
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:14:56) 
-- CODE:
print(round(50/3,0))
-- EXECUTION TIME:
0.124489
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:16:23) 
-- CODE:
print(50/3<17
-- ERROR:
File "XXXX", line 2
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:01) 
-- CODE:
print(round(50/3,0)<17)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:13) 
-- CODE:
print(round(50/3,0<17))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:21:23) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:22:10) 
-- CODE:
print(50/3.upper())
-- ERROR:
File "XXXX", line 1
    print(50/3.upper())
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:22:19) 
-- CODE:
print(50/3.upper)
-- ERROR:
File "XXXX", line 1
    print(50/3.upper)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:22:25) 
-- CODE:
print(50/3upper)
-- ERROR:
File "XXXX", line 1
    print(50/3upper)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:23:36) 
-- CODE:
print(50/3-1)
-- OUTPUT:
15.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:24:00) 
-- CODE:
print(round(50/3,0)-1)
-- OUTPUT:
16.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:25:11) 
-- CODE:
print(round(50/3,0)-1)
print(50-16*3)
-- OUTPUT:
16.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:25:16) 
-- CODE:
print(round(50/3,0)-1)
print(50-16*3)
-- EXECUTION TIME:
0.183899
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:25:39) 
-- CODE:
print(round(50/3,0)-1)
-- OUTPUT:
16.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:26:30) 
-- CODE:
print(round(50/3,0)-1)
print(50%3)
-- OUTPUT:
16.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:26:47) 
-- CODE:
print(round(50/3,0)-1)
print(50%3)
-- EXECUTION TIME:
0.133382
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:27:00) 
-- CODE:
print(round(50//3)
print(50%3)
-- ERROR:
File "XXXX", line 2
    print(50%3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:27:11) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:28:51) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.12395
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:29:41) 
-- CODE:
print(50/3)
print(50%3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:29:49) 
-- CODE:
print(50///3)
print(50%3)
-- ERROR:
File "XXXX", line 1
    print(50///3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:29:55) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
